Only run the file that is failing

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,6 @@ before_install:
   - gem install bundler
   - npm i -g eslint babel-eslint
   - npm version
-  - eslint app/assets/javascripts
-  - eslint --ext .es6 app/assets/javascripts
-  - eslint --ext .es6 test/javascripts
-  - eslint --ext .es6 plugins/**/assets/javascripts
-  - eslint test/javascripts
 
 before_script:
   - bundle exec rake db:create db:migrate
@@ -53,4 +48,4 @@ install:
   - bash -c "if [ '$RAILS_MASTER' == '1' ]; then bundle update --retry=3 --jobs=3 arel rails rails-observers seed-fu; fi"
   - bash -c "if [ '$RAILS_MASTER' == '0' ]; then bundle install --without development --deployment --retry=3 --jobs=3; fi"
 
-script: 'bundle exec rspec && bundle exec rake plugin:spec && bundle exec rake qunit:test'
+script: 'bundle exec rspec spec/models/post_spec.rb'
